@@ -87,6 +87,11 @@ public class EmptyPigStats extends PigStats {
     }
 
     @Override
+    public String getDisplayString() {
+        return null;
+    }
+
+    @Override
     public JobGraph getJobGraph() {
        return emptyJobPlan;
     }
