@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-5037: Add api getDisplayString to PigStats (zjffdu)
+
 PIG-4945: Update document for conflicting macro params (knoguchi via daijy)
 
 OPTIMIZATIONS
